tests/errors/alias-2.ja
procedure foo(int a, int b)
    skip

procedure main()
    int x
    int y

    call foo(x, x)
    call foo(y, y)
